# desilo-core

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: industries.yaml
core/: __init__.py
core/contracts/: __init__.py  knowledge.py  resources.py  search.py
core/memory/: __init__.py
desilo_core/: __init__.py
desilo_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
desilo_core/adapters/: __init__.py
desilo_core/agents/: __init__.py  base_research_crew.py  simple_market_crew.py
desilo_core/api/: __init__.py
desilo_core/contracts/: __init__.py  agent.py  events.py  tenant.py  workflow.py
desilo_core/memory/: collaborative_memory.py
desilo_core/utils/: __init__.py  calendar.py  date_filtering.py  event_cache.py  event_extraction.py
desilo_core/workflow/: __init__.py  context_store.py  orchestrator.py
docs/: design-deterministic-workflow.md
tests/: test_anti_sycophancy.py  test_calendar.py  test_date_filtering.py  test_event_extraction.py  test_workflow.py
ui/: package.json  tsconfig.json
ui/components/: CalendarButton.tsx  CalendarEventRenderer.tsx  index.ts
ui/utils/: parseEvents.ts
