[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desilo-core"
version = "0.2.0"
description = "Open source startup intelligence engine - generic infrastructure for AI-powered startup platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DeSilo Team", email = "team@desilo.ai"}
]
keywords = ["startup", "ai", "crewai", "intelligence", "market-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/thecuriousnobody/desilo-core"
Repository = "https://github.com/thecuriousnobody/desilo-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["desilo_core*", "config*"]
